@@ -1410,6 +1410,7 @@ sub _convert($$;$)
 1;
 
 __END__
+# $Id$
 # Automatically generated from maintain/template.pod
 
 =head1 NAME
@@ -1422,6 +1423,8 @@ Texinfo::Convert::DocBook - Convert Texinfo tree to DocBook
     = Texinfo::Convert::DocBook->converter({'parser' => $parser});
 
   $converter->output($tree);
+  $converter->convert($tree);
+  $converter->convert_tree($tree);
 
 =head1 DESCRIPTION
 
@@ -1433,7 +1436,7 @@ Texinfo::Convert::DocBook converts a Texinfo tree to DocBook.
 
 =item $converter = Texinfo::Convert::DocBook->converter($options)
 
-Initialize a DocBook converter.  
+Initialize converter from Texinfo to DocBook.  
 
 The I<$options> hash reference holds options for the converter.  In
 this option hash reference a parser object may be associated with the 
@@ -1455,9 +1458,9 @@ the resulting output.
 
 =item $result = $converter->convert_tree($tree)
 
-Convert a Texinfo tree portion I<$tree> and return the resulting output.
-This function do not try to output a full document but only portions.
-For a full document use C<convert>.
+Convert a Texinfo tree portion I<$tree> and return the resulting 
+output.  This function does not try to output a full document but only
+portions.  For a full document use C<convert>.
 
 =back
 
@@ -1467,7 +1470,7 @@ Patrice Dumas, E<lt>pertusus@free.frE<gt>
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright 2012, 2013, 2014, 2015 Free Software Foundation, Inc.
+Copyright 2015 Free Software Foundation, Inc.
 
 This library is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
